Fixed readability for nav bar pages

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -42,7 +42,7 @@
   }
 
   .page-link {
-    color: $text-color;
+    color: $grey-color-dark;
     line-height: $base-line-height;
 
     // Gaps between nav items, but not on the last one
